--- a/micro-apps/team-details/client/index.html
+++ b/micro-apps/team-details/client/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Team details</title>
     <script src="./jqUery"></script>
+    <script src="./shell-app-client.js"></script>
     <script src="./index.js"></script>
+
 
 </head>
 <body>
