--- a/micro-apps/teamsDetails/src/index.html
+++ b/micro-apps/teamsDetails/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/team-details-app/">
   <meta charset="utf-8">
   <title>Teams Manager</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
