Remove the view team header

--- a/micro-apps/teams/client/index.html
+++ b/micro-apps/teams/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Team details</title>
+    <title>Teams</title>
     <script src="./jqUery"></script>
     <script src="./shell-app-client.js"></script>
     <script src="./index.js"></script>
@@ -10,6 +10,6 @@
 
 </head>
 <body>
-    <h1>Team Details</h1>
+    <h1>Teams</h1>
 </body>
 </html>
